Refactoring, unit tests for the methods, more test data

--- a/Multiple_Regression_Algorithm/Multiple_Regression_Algorithm.csproj
+++ b/Multiple_Regression_Algorithm/Multiple_Regression_Algorithm.csproj
@@ -14,6 +14,9 @@
     <None Update="Test_Data_2.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Test_Data_3.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
