--- a/Multiple_Regression_Algorithm/Multiple_Regression_Algorithm.csproj
+++ b/Multiple_Regression_Algorithm/Multiple_Regression_Algorithm.csproj
@@ -17,6 +17,9 @@
     <None Update="Test_Data_3.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Test_Data_4.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
